tests/typing/bad/testfile-underscore-2.go
package main

func f() int { a, _ := 1, 2; return _ }
func main() {}
